<resources>
    <string name="app_name">Sample_Table_Layout</string>
    <string name="loginForm">Login Form </string>
    <string name="tUsername">User Name</string>
    <string name="tPassword">Password</string>
    <string name="login">Login</string>
    <string name="tLogo">Icon Login</string>
    <string name="tData">Data Anda</string>
    <string name="tUser">User : </string>
    <string name="tPass">Password : </string>
    <string name="txUser">Ini hasil Username </string>
    <string name="txPass">Ini hasil Password </string>
    <string name="label2">Login Berhasil!</string>
    <string name="mDaftar">Pendaftaran</string>
    <string name="ldaftar">Daftar</string>
    <string name="enama">Masukan Nama</string>
    <string name="eemail">Masukan Email</string>
    <string name="eoass">Masukan Password</string>
    <string name="erepass">Masukan Password Kembali</string>
    <string name="ealamat">Masukan Alamat</string>

</resources>