<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_main_scene"
    tools:context=".MainActivity" >

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="30dp"
        android:layout_marginTop="10dp"
        >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="160dp"
            android:layout_height="93dp"
            android:contentDescription="@string/tLogo"
            app:srcCompat="@drawable/oogin" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="20dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/loginForm"
            android:textColor="@color/cLabel"
            android:textSize="25sp"
            android:textStyle="bold" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/tUsername"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edUser"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:background="@color/white"
            android:hint="@string/tUsername"
            android:inputType="text"
            android:padding="5dp"
            android:textColor="@color/black" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp">

        <TextView
            android:id="@+id/textView4"

            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/tPassword"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edPass"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:hint="@string/tPassword"
            android:inputType="textPassword"
            android:padding="5dp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="10dp"
        android:layout_marginTop="30dp"
        >

        <Button
            android:id="@+id/btSign"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_span="2"
            android:background="@color/teal_200"
            android:text="@string/login"
            android:textSize="20sp"
            android:textStyle="bold" />
    </TableRow>
</TableLayout>